# Empiadera

Main/: Cargo.toml  registros.csv  registros_empilhadeira.csv
Main/src/: main.rs
